unpackaged/main/default/objects/Deposit_Based_Upload_Information__c/Deposit_Based_Upload_Information__c.object-meta.xml
<CustomObject>
    <description>When TCH uploads the deposit information into Fonteva from Accuity, it will be in this custom object.</description>
    <label>Deposit Based Upload Information</label>
    <nameField>
        <label>Deposit Based Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposit Based Uploads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>