unpackaged/main/default/objects/Deposit_Based_Upload_Information__c/fields/Primary_R_T_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_R_T_Number__c</fullName>
    <externalId>true</externalId>
    <label>Primary R/T Number</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>