unpackaged/main/default/objects/Deposit_Based_Upload_Information__c/fields/Report_Source__c.field-meta.xml
<CustomField>
    <fullName>Report_Source__c</fullName>
    <label>Report Source</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>