unpackaged/main/default/objects/Deposit_Based_Upload_Information__c/fields/Total_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposits__c</fullName>
    <label>Total Deposits</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>