unpackaged/main/default/objects/Deposit_Based_Upload_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Primary_R_T_Number__c</columns>
    <columns>Report_Date__c</columns>
    <columns>Total_Deposits__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>contains</operation>
        <value>FSNB</value>
    </filters>
    <label>All</label>
</ListView>